// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleWithIcon should be gradient when passed array of colors 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff0",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      false,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    proxiedProperties={
      {
        "colors": [
          4294901760,
          4294967040,
        ],
        "endPoint": [
          0.5,
          1,
        ],
        "locations": undefined,
        "startPoint": [
          0.5,
          0,
        ],
      }
    }
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff0",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#55ACEE",
            "fontSize": 40,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`CircleWithIcon should be gradient when passed array of colors and positioned with start/end 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff0",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      false,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    proxiedProperties={
      {
        "colors": [
          4294901760,
          4294967040,
        ],
        "endPoint": [
          1,
          1,
        ],
        "locations": undefined,
        "startPoint": [
          0,
          0,
        ],
      }
    }
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff0",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#55ACEE",
            "fontSize": 40,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`CircleWithIcon should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F1F5FD",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      false,
    ]
  }
>
  <Text />
</View>
`;

exports[`CircleWithIcon should render with shadow 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F1F5FD",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "elevation": 20,
        "shadowColor": "#16196670",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#55ACEE",
          "fontSize": 40,
        },
        undefined,
        {
          "fontFamily": "anticon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`CircleWithIcon should render with shadow when gradient is applied 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff0",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "elevation": 20,
        "shadowColor": "#16196670",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    proxiedProperties={
      {
        "colors": [
          4294901760,
          4294967040,
        ],
        "endPoint": [
          0.5,
          1,
        ],
        "locations": undefined,
        "startPoint": [
          0.5,
          0,
        ],
      }
    }
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff0",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#55ACEE",
            "fontSize": 40,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;
